namespace Utils
{
    public static class AnimationUtils
    {
        public const string Attack = "attack";
        public const string Level = "Level";
        public const string Die = "die";
        public const string Down = "down";
        public const string Up = "up";
        public const string Left = "leftside";
    }
}